--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -451,8 +451,8 @@
 									</div>
 								</div>
 
-								<div style="background-color: var(--fondoBotonPequeño); padding: 1px; height: 100%;">
-									<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
+								<div style="background-color: var(--fondoBotonPequeño); padding: 2px; height: 100%;">
+									<img src="@noticia.Imagen" style="width: 100%; height: 100%; max-height: 230px; object-fit: contain;" alt="@noticia.TituloEn" />
 								</div>
 
 								<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
@@ -966,9 +966,12 @@ else
 
 				try
 				{
-					juegosMinimosGestor = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosMinimos");
+					juegosMinimosGestor = BaseDatos.Juegos.Buscar.UltimosDetectados(250, conexion);
 				}
-				catch { }
+				catch (Exception ex)
+				{
+					BaseDatos.Errores.Insertar.Ejecutar("Portada Minimos", ex);				
+				}
 
 				if (juegosMinimosGestor != null)
 				{
@@ -984,9 +987,12 @@ else
 
 				try
 				{
-					noticiasGestor = BaseDatos.Noticias.Buscar.Ultimas(conexion, "30");
+					noticiasGestor = BaseDatos.Noticias.Buscar.Ultimas("30", conexion);
 				}
-				catch { }
+				catch (Exception ex)
+				{
+					BaseDatos.Errores.Insertar.Ejecutar("Portada Noticias", ex);
+				}
 
 				if (noticiasGestor != null)
 				{
