--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -229,18 +229,46 @@
 					</a>
 				}				
 			}
+
+			if (string.IsNullOrEmpty(juego.MayorEdad) == false)
+			{
+				if (juego.MayorEdad.ToLower() == "true")
+				{
+					<div class="perfil" style="padding: 20px 40px; flex-direction: row; align-items: center; background-color: var(--fondoAlerta); margin-bottom: 50px;">
+						<i class="fa-solid fa-exclamation" style="font-size: 22px; margin-right: 30px;"></i>
+
+						<div style="width: 100%;">
+							@Idiomas.CogerCadena(idioma, "String46", "Game")
+						</div>
+					</div>
+				}
+			}
 		}
 		else if (juego.Tipo == JuegoTipo.Game)
 		{
-			@if (string.IsNullOrEmpty(juego.FreeToPlay) == false)
+			if (string.IsNullOrEmpty(juego.FreeToPlay) == false)
 			{
-				@if (juego.FreeToPlay.ToLower() == "true")
+				if (juego.FreeToPlay.ToLower() == "true")
 				{
 					<div class="perfil perfil-espacio-bottom" style="padding: 20px 40px; flex-direction: row; align-items: center;">
 						<i class="fa-solid fa-circle-info" style="font-size: 22px; margin-right: 30px;"></i>
 
 						<div style="width: 100%;">
 							@Idiomas.CogerCadena(idioma, "String33", "Game")
+						</div>
+					</div>
+				}
+			}
+
+			if (string.IsNullOrEmpty(juego.MayorEdad) == false)
+			{
+				if (juego.MayorEdad.ToLower() == "true")
+				{
+					<div class="perfil" style="padding: 20px 40px; flex-direction: row; align-items: center; background-color: var(--fondoAlerta); margin-bottom: 50px;">
+						<i class="fa-solid fa-exclamation" style="font-size: 22px; margin-right: 30px;"></i>
+
+						<div style="width: 100%;">
+							@Idiomas.CogerCadena(idioma, "String45", "Game")
 						</div>
 					</div>
 				}
