--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -89,28 +89,32 @@
         Afiliados
     </div>
 
-    <div style="display: flex; align-items: center; margin-top: 20px;">
-        <div style="margin-right: 20px;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; margin-top: 20px; gap: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://www.humblebundle.com/partner/dashboard/sales" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Humble</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://partners.fanatical.com/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Fanatical</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://uk.gamesplanet.com/partner/uk/reports" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Gamesplanet</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://affiliate.indiegala.com/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">IndieGala</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
+            <a class="boton-pequeño" href="https://app.impact.com/login.user" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Impact</a>
+        </div>
+
+        <div>
             <a class="boton-pequeño" href="https://members.cj.com/member/publisher/home.do" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Comission Junction</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://www.macgamestore.com/affiliate/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">WinGameStore</a>
         </div>
     </div>
