--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Recompensas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Recompensas.razor
@@ -41,7 +41,8 @@
 
 		@if (usuario.RewardsCoins >= 30)
 		{
-			<div class="alert alert-danger alert-dismissible" style="padding: 40px; margin-bottom: 20px; border-radius: 0px;">
+			<div class="alert alert-danger alert-dismissible" style="padding: 20px, 40px; margin-bottom: 20px; border-radius: 0px; display: flex; align-items: center; gap: 20px;">
+				<i style="font-size: 25px;" class="fa-solid fa-circle-exclamation"></i>
 				@Herramientas.Idiomas.CogerCadena(idioma, "Limit", "Rewards")
 			</div>
 		}
