--- a/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
@@ -29,7 +29,9 @@
 
 @if (cargado == false)
 {
-	<div class="cargando" />
+	<div style="text-align: center; width: 100%;">
+		<div class="cargando" />
+	</div>	
 }
 else
 {
