--- a/pepeizqs deals web/Pages/Componentes/Tareas/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Tareas/Minimos.razor
@@ -32,13 +32,13 @@
 			{
 				try
 				{
-					TimeSpan tiempoSiguiente = TimeSpan.FromMinutes(5);
+					TimeSpan tiempoSiguiente = TimeSpan.FromMinutes(10);
 
 					if (BaseDatos.Tiendas.Admin.ComprobarTareaUso(conexion, "minimos", tiempoSiguiente) == true)
 					{
 						BaseDatos.Tiendas.Admin.ActualizarTareaUso(conexion, "minimos", DateTime.Now);
 
-						List<Juego> juegos = BaseDatos.Juegos.Buscar.Todos(conexion, "juegos", 3);
+						List<Juego> juegos = BaseDatos.Juegos.Buscar.Todos(conexion, "juegos", 3, true);
 
 						if (juegos != null)
 						{
@@ -48,93 +48,81 @@
 
 								foreach (var juego in juegos)
 								{
-									if (juego != null)
+									if (juego.PrecioMinimosHistoricos != null)
 									{
-										if (juego.Analisis != null)
+										if (juego.PrecioMinimosHistoricos.Count > 0)
 										{
-											if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false && string.IsNullOrEmpty(juego.Analisis.Cantidad) == false)
+											List<JuegoPrecio> historicosFinales = new List<JuegoPrecio>();
+
+											foreach (var historico in juego.PrecioMinimosHistoricos)
 											{
-												if (juego.Analisis.Cantidad.Length > 2)
+												TimeSpan actualizado = DateTime.Now.Subtract(historico.FechaActualizacion);
+
+												if (actualizado.Days == 0)
 												{
-													if (juego.PrecioMinimosHistoricos != null)
+													bool añadir = true;
+
+													if (historico.DRM == JuegoDRM.NoEspecificado)
 													{
-														if (juego.PrecioMinimosHistoricos.Count > 0)
+														añadir = false;
+													}
+
+													if (añadir == true)
+													{
+														historicosFinales.Add(historico);
+													}
+												}
+											}
+
+											if (historicosFinales.Count > 0)
+											{
+												foreach (var historicoFinal in historicosFinales)
+												{
+													Juego nuevoJuego = new Juego();
+													nuevoJuego = juego;
+													nuevoJuego.PrecioMinimosHistoricos = null;
+													nuevoJuego.PrecioActualesTiendas = null;
+													nuevoJuego.IdMaestra = juego.Id;
+
+													bool añadir = true;
+
+													if (string.IsNullOrEmpty(nuevoJuego.FreeToPlay) == false)
+													{
+														if (nuevoJuego.FreeToPlay.ToLower() == "true")
 														{
-															List<JuegoPrecio> historicosFinales = new List<JuegoPrecio>();
+															añadir = false;
+														}
+													}
 
-															foreach (var historico in juego.PrecioMinimosHistoricos)
+													if (string.IsNullOrEmpty(nuevoJuego.MayorEdad) == false)
+													{
+														if (nuevoJuego.MayorEdad.ToLower() == "true")
+														{
+															añadir = false;
+														}
+													}
+
+													if (nuevoJuego.Gratis != null)
+													{
+														if (nuevoJuego.Gratis.Count > 0)
+														{
+															foreach (var gratis in nuevoJuego.Gratis)
 															{
-																TimeSpan actualizado = DateTime.Now.Subtract(historico.FechaActualizacion);
-
-																if (actualizado.Days == 0)
+																if (gratis.DRM == historicoFinal.DRM)
 																{
-																	bool añadir = true;
-
-																	if (historico.DRM == JuegoDRM.NoEspecificado)
-																	{
-																		añadir = false;
-																	}
-
-																	if (añadir == true)
-																	{
-																		historicosFinales.Add(historico);
-																	}
-																}
-															}
-
-															if (historicosFinales.Count > 0)
-															{
-																foreach (var historicoFinal in historicosFinales)
-																{
-																	Juego nuevoJuego = new Juego();
-																	nuevoJuego = juego;
-																	nuevoJuego.PrecioMinimosHistoricos = null;
-																	nuevoJuego.PrecioActualesTiendas = null;
-																	nuevoJuego.IdMaestra = juego.Id;
-
-																	bool añadir = true;
-
-																	if (string.IsNullOrEmpty(nuevoJuego.FreeToPlay) == false)
-																	{
-																		if (nuevoJuego.FreeToPlay.ToLower() == "true")
-																		{
-																			añadir = false;
-																		}
-																	}
-
-																	if (string.IsNullOrEmpty(nuevoJuego.MayorEdad) == false)
-																	{
-																		if (nuevoJuego.MayorEdad.ToLower() == "true")
-																		{
-																			añadir = false;
-																		}
-																	}
-
-																	if (nuevoJuego.Gratis != null)
-																	{
-																		if (nuevoJuego.Gratis.Count > 0)
-																		{
-																			foreach (var gratis in nuevoJuego.Gratis)
-																			{
-																				if (gratis.DRM == historicoFinal.DRM)
-																				{
-																					añadir = false;
-																				}
-																			}
-																		}
-																	}
-
-																	if (añadir == true)
-																	{
-																		MinimoListado minimoListado = new MinimoListado();
-																		minimoListado.Juego = nuevoJuego;
-																		minimoListado.Historico = historicoFinal;
-
-																		juegosConMinimos.Add(minimoListado);
-																	}
+																	añadir = false;
 																}
 															}
 														}
+													}
+
+													if (añadir == true)
+													{
+														MinimoListado minimoListado = new MinimoListado();
+														minimoListado.Juego = nuevoJuego;
+														minimoListado.Historico = historicoFinal;
+
+														juegosConMinimos.Add(minimoListado);
 													}
 												}
 											}
